Edit week_9 ipynb file

--- a/week_9/week_9.ipynb
+++ b/week_9/week_9.ipynb
@@ -106,6 +106,54 @@
     "\n",
     "print(dir(builtins))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96cea4b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d52f8a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define echo\n",
+    "def echo(n):\n",
+    "    \"\"\"Return the inner_echo function.\"\"\"\n",
+    "\n",
+    "    # Define inner_echo\n",
+    "    def inner_echo(word1):\n",
+    "        \"\"\"Concatenate n copies of word1.\"\"\"\n",
+    "        echo_word = word1 * n\n",
+    "        return echo_word\n",
+    "\n",
+    "    # Return inner_echo\n",
+    "    return echo(inner_echo(n))\n",
+    "\n",
+    "# Call echo: twice\n",
+    "twice = echo(2)\n",
+    "\n",
+    "# Call echo: thrice\n",
+    "thrice = echo(3)\n",
+    "\n",
+    "# Call twice() and thrice() then print\n",
+    "print(twice('hello'), thrice('hello'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51893c60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"hello\")"
+   ]
   }
  ],
  "metadata": {
