Edit week_9 ipynb file

--- a/week_9/week_9.ipynb
+++ b/week_9/week_9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "ae05ca58",
    "metadata": {},
    "outputs": [
@@ -20,6 +20,8 @@
     "\n",
     "# Import Twitter data as DataFrame: df\n",
     "df = pd.read_csv('./tweets.csv')\n",
+    "\n",
+    "tweets_df = df\n",
     "\n",
     "# Initialize an empty dictionary: langs_count\n",
     "langs_count = {}\n",
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "233a5748",
    "metadata": {},
    "outputs": [
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "4e893ff6",
    "metadata": {},
    "outputs": [
@@ -117,42 +119,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d52f8a71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define echo\n",
-    "def echo(n):\n",
-    "    \"\"\"Return the inner_echo function.\"\"\"\n",
-    "\n",
-    "    # Define inner_echo\n",
-    "    def inner_echo(word1):\n",
-    "        \"\"\"Concatenate n copies of word1.\"\"\"\n",
-    "        echo_word = word1 * n\n",
-    "        return echo_word\n",
-    "\n",
-    "    # Return inner_echo\n",
-    "    return echo(inner_echo(n))\n",
-    "\n",
-    "# Call echo: twice\n",
-    "twice = echo(2)\n",
-    "\n",
-    "# Call echo: thrice\n",
-    "thrice = echo(3)\n",
-    "\n",
-    "# Call twice() and thrice() then print\n",
-    "print(twice('hello'), thrice('hello'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "51893c60",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'en': 97, 'et': 1, 'und': 2}\n",
+      "{'<a href=\"http://twitter.com\" rel=\"nofollow\">Twitter Web Client</a>': 24, '<a href=\"http://www.facebook.com/twitter\" rel=\"nofollow\">Facebook</a>': 1, '<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>': 26, '<a href=\"http://twitter.com/download/iphone\" rel=\"nofollow\">Twitter for iPhone</a>': 33, '<a href=\"http://www.twitter.com\" rel=\"nofollow\">Twitter for BlackBerry</a>': 2, '<a href=\"http://www.google.com/\" rel=\"nofollow\">Google</a>': 2, '<a href=\"http://twitter.com/#!/download/ipad\" rel=\"nofollow\">Twitter for iPad</a>': 6, '<a href=\"http://linkis.com\" rel=\"nofollow\">Linkis.com</a>': 2, '<a href=\"http://rutracker.org/forum/viewforum.php?f=93\" rel=\"nofollow\">newzlasz</a>': 2, '<a href=\"http://ifttt.com\" rel=\"nofollow\">IFTTT</a>': 1, '<a href=\"http://www.myplume.com/\" rel=\"nofollow\">Plume\\xa0for\\xa0Android</a>': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"hello\")"
+    "# Define count_entries()\n",
+    "def count_entries(df, col_name='lang'):\n",
+    "    \"\"\"Return a dictionary with counts of\n",
+    "    occurrences as value for each key.\"\"\"\n",
+    "\n",
+    "    # Initialize an empty dictionary: cols_count\n",
+    "    cols_count = {}\n",
+    "\n",
+    "    # Extract column from DataFrame: col\n",
+    "    col = df[col_name]\n",
+    "    \n",
+    "    # Iterate over the column in DataFrame\n",
+    "    for entry in col:\n",
+    "\n",
+    "        # If entry is in cols_count, add 1\n",
+    "        if entry in cols_count.keys():\n",
+    "            cols_count[entry] += 1\n",
+    "\n",
+    "        # Else add the entry to cols_count, set the value to 1\n",
+    "        else:\n",
+    "            cols_count[entry] = 1\n",
+    "\n",
+    "    # Return the cols_count dictionary\n",
+    "    return cols_count\n",
+    "\n",
+    "# Call count_entries(): result1\n",
+    "result1 = count_entries(tweets_df)\n",
+    "\n",
+    "# Call count_entries(): result2\n",
+    "result2 = count_entries(tweets_df, 'source')\n",
+    "\n",
+    "# Print result1 and result2\n",
+    "print(result1)\n",
+    "print(result2)"
    ]
   }
  ],
