Edit week_9 ipynb file - 3

--- a/week_9/week_9.ipynb
+++ b/week_9/week_9.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ae05ca58",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'en': 97, 'et': 1, 'und': 2}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import pandas\n",
     "import pandas as pd\n",
@@ -163,6 +155,62 @@
     "\n",
     "# Call count_entries(): result2\n",
     "result2 = count_entries(tweets_df, 'source')\n",
+    "\n",
+    "# Print result1 and result2\n",
+    "print(result1)\n",
+    "print(result2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5e2f156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1321fa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define count_entries()\n",
+    "def count_entries(df, *args):\n",
+    "    \"\"\"Return a dictionary with counts of\n",
+    "    occurrences as value for each key.\"\"\"a\n",
+    "    \n",
+    "    #Initialize an empty dictionary: cols_count\n",
+    "    cols_count = {}\n",
+    "    \n",
+    "    # Iterate over column names in args\n",
+    "    for col_name in cols_count:\n",
+    "    \n",
+    "        # Extract column from DataFrame: col\n",
+    "        col = df[col_name]\n",
+    "    \n",
+    "        # Iterate over the column in DataFrame\n",
+    "        for entry in col:\n",
+    "    \n",
+    "            # If entry is in cols_count, add 1\n",
+    "            if entry in cols_count.keys():\n",
+    "                cols_count[entry] += 1\n",
+    "    \n",
+    "            # Else add the entry to cols_count, set the value to 1\n",
+    "            else:\n",
+    "                cols_count[entry] = 1\n",
+    "\n",
+    "    # Return the cols_count dictionary\n",
+    "    return cols_count\n",
+    "\n",
+    "# Call count_entries(): result1\n",
+    "result1 = count_entries(tweets_df, 'lang')\n",
+    "\n",
+    "# Call count_entries(): result2\n",
+    "result2 = count_entries(tweets_df, 'lang', 'source')\n",
     "\n",
     "# Print result1 and result2\n",
     "print(result1)\n",
