Edit week_9 ipynb file - 4

--- a/week_9/week_9.ipynb
+++ b/week_9/week_9.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ae05ca58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'en': 97, 'et': 1, 'und': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "# Import pandas\n",
     "import pandas as pd\n",
@@ -33,6 +41,36 @@
     "\n",
     "# Print the populated dictionary\n",
     "print(langs_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "31f3ad68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['contributors', 'coordinates', 'created_at', 'entities',\n",
+       "       'extended_entities', 'favorite_count', 'favorited', 'filter_level',\n",
+       "       'geo', 'id', 'id_str', 'in_reply_to_screen_name',\n",
+       "       'in_reply_to_status_id', 'in_reply_to_status_id_str',\n",
+       "       'in_reply_to_user_id', 'in_reply_to_user_id_str', 'is_quote_status',\n",
+       "       'lang', 'place', 'possibly_sensitive', 'quoted_status',\n",
+       "       'quoted_status_id', 'quoted_status_id_str', 'retweet_count',\n",
+       "       'retweeted', 'retweeted_status', 'source', 'text', 'timestamp_ms',\n",
+       "       'truncated', 'user'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_df.columns"
    ]
   },
   {
@@ -173,21 +211,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f1321fa9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'en': 97, 'et': 1, 'und': 2}\n",
+      "{'en': 97, 'et': 1, 'und': 2, '<a href=\"http://twitter.com\" rel=\"nofollow\">Twitter Web Client</a>': 24, '<a href=\"http://www.facebook.com/twitter\" rel=\"nofollow\">Facebook</a>': 1, '<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>': 26, '<a href=\"http://twitter.com/download/iphone\" rel=\"nofollow\">Twitter for iPhone</a>': 33, '<a href=\"http://www.twitter.com\" rel=\"nofollow\">Twitter for BlackBerry</a>': 2, '<a href=\"http://www.google.com/\" rel=\"nofollow\">Google</a>': 2, '<a href=\"http://twitter.com/#!/download/ipad\" rel=\"nofollow\">Twitter for iPad</a>': 6, '<a href=\"http://linkis.com\" rel=\"nofollow\">Linkis.com</a>': 2, '<a href=\"http://rutracker.org/forum/viewforum.php?f=93\" rel=\"nofollow\">newzlasz</a>': 2, '<a href=\"http://ifttt.com\" rel=\"nofollow\">IFTTT</a>': 1, '<a href=\"http://www.myplume.com/\" rel=\"nofollow\">Plume\\xa0for\\xa0Android</a>': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "# Define count_entries()\n",
     "def count_entries(df, *args):\n",
     "    \"\"\"Return a dictionary with counts of\n",
-    "    occurrences as value for each key.\"\"\"a\n",
+    "    occurrences as value for each key.\"\"\"\n",
     "    \n",
     "    #Initialize an empty dictionary: cols_count\n",
     "    cols_count = {}\n",
     "    \n",
     "    # Iterate over column names in args\n",
-    "    for col_name in cols_count:\n",
+    "    for col_name in args:\n",
     "    \n",
     "        # Extract column from DataFrame: col\n",
     "        col = df[col_name]\n",
