--- a/week_9/week_9.ipynb
+++ b/week_9/week_9.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "709f2843",
+   "metadata": {},
+   "source": [
+    "# Part 1, 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ae05ca58",
@@ -46,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "31f3ad68",
+   "id": "c64b7319",
    "metadata": {},
    "outputs": [
     {
@@ -262,6 +270,290 @@
     "# Print result1 and result2\n",
     "print(result1)\n",
     "print(result2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2182bd9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RT @bpolitics: .@krollbondrating's Christopher Whalen says Clinton is the weakest Dem candidate in 50 years https://t.co/pLk7rvoRSn https:/…\n",
+      "RT @HeidiAlpine: @dmartosko Cruz video found.....racing from the scene.... #cruzsexscandal https://t.co/zuAPZfQDk3\n",
+      "RT @AlanLohner: The anti-American D.C. elites despise Trump for his America-first foreign policy. Trump threatens their gravy train. https:…\n",
+      "RT @BIackPplTweets: Young Donald trump meets his neighbor  https://t.co/RFlu17Z1eE\n",
+      "RT @trumpresearch: @WaitingInBagdad @thehill Trump supporters have selective amnisia.\n",
+      "RT @HouseCracka: 29,000+ PEOPLE WATCHING TRUMP LIVE ON ONE STREAM!!!\n",
+      "\n",
+      "https://t.co/7QCFz9ehNe\n",
+      "RT @urfavandtrump: RT for Brendon Urie\n",
+      "Fav for Donald Trump https://t.co/PZ5vS94lOg\n",
+      "RT @trapgrampa: This is how I see #Trump every time he speaks. https://t.co/fYSiHNS0nT\n",
+      "RT @trumpresearch: @WaitingInBagdad @thehill Trump supporters have selective amnisia.\n",
+      "RT @Pjw20161951: NO KIDDING: #SleazyDonald just attacked Scott Walker for NOT RAISING TAXES in WI! #LyinTrump\n",
+      "#NeverTrump  #CruzCrew  https…\n",
+      "RT @urfavandtrump: RT for Brendon Urie\n",
+      "Fav for Donald Trump https://t.co/PZ5vS94lOg\n",
+      "RT @ggreenwald: The media spent all day claiming @SusanSarandon said she might vote for Trump. A total fabrication, but whatever... https:/…\n",
+      "RT @Pjw20161951: NO KIDDING: #SleazyDonald just attacked Scott Walker for NOT RAISING TAXES in WI! #LyinTrump\n",
+      "#NeverTrump  #CruzCrew  https…\n",
+      "RT @trapgrampa: This is how I see #Trump every time he speaks. https://t.co/fYSiHNS0nT\n",
+      "RT @mitchellvii: So let me get this straight.  Any reporter can assault Mr Trump at any time and Corey can do nothing?  Michelle is clearly…\n",
+      "RT @paulbenedict7: How #Trump Sacks RINO Strongholds by Hitting Positions Held by Dems and GOP https://t.co/D7ulnAJhis   #tcot #PJNET https…\n",
+      "RT @DRUDGE_REPORT: VIDEO:  Trump emotional moment with Former Miss Wisconsin who has terminal illness... https://t.co/qt06aG9inT\n",
+      "RT @ggreenwald: The media spent all day claiming @SusanSarandon said she might vote for Trump. A total fabrication, but whatever... https:/…\n",
+      "RT @DennisApgar: Thank God I seen Trump at first stop in Wisconsin media doesn't know how great he is, advice watch live streaming https://…\n",
+      "RT @paulbenedict7: How #Trump Sacks RINO Strongholds by Hitting Positions Held by Dems and GOP https://t.co/D7ulnAJhis   #tcot #PJNET https…\n",
+      "RT @DRUDGE_REPORT: VIDEO:  Trump emotional moment with Former Miss Wisconsin who has terminal illness... https://t.co/qt06aG9inT\n",
+      "RT @DennisApgar: Thank God I seen Trump at first stop in Wisconsin media doesn't know how great he is, advice watch live streaming https://…\n",
+      "RT @mitchellvii: So let me get this straight.  Any reporter can assault Mr Trump at any time and Corey can do nothing?  Michelle is clearly…\n",
+      "RT @sciam: Trump's idiosyncratic patterns of speech are why people tend either to love or hate him https://t.co/QXwquVgs3c https://t.co/P9N…\n",
+      "RT @Norsu2: Nightmare WI poll for Ted Cruz has Kasich surging: Trump 29, Kasich 27, Cruz 25. https://t.co/lJsgbLYY1P #NeverTrump\n",
+      "RT @thehill: WATCH: Protester pepper-sprayed point blank at Trump rally https://t.co/B5f65Al9ld https://t.co/skAfByXuQc\n",
+      "RT @sciam: Trump's idiosyncratic patterns of speech are why people tend either to love or hate him https://t.co/QXwquVgs3c https://t.co/P9N…\n",
+      "RT @ggreenwald: The media spent all day claiming @SusanSarandon said she might vote for Trump. A total fabrication, but whatever... https:/…\n",
+      "RT @DebbieStout5: Wow! Last I checked it was just 12 points &amp; that wasn't more than a day ago. Oh boy Trump ppl might want to rethink🤔 http…\n",
+      "RT @tyleroakley: i'm a messy bitch, but at least i'm not voting for trump\n",
+      "RT @vandives: Trump supporters r tired of justice NOT being served. There's no justice anymore. Hardworking Americans get screwed. That's n…\n",
+      "RT @AP: BREAKING: Trump vows to stand by campaign manager charged with battery, says he does not discard people.\n",
+      "RT @AP: BREAKING: Trump vows to stand by campaign manager charged with battery, says he does not discard people.\n",
+      "RT @urfavandtrump: RT for Jerrie (Little Mix)\n",
+      "Fav for Donald Trump https://t.co/nEVxElW6iG\n",
+      "RT @urfavandtrump: RT for Jerrie (Little Mix)\n",
+      "Fav for Donald Trump https://t.co/nEVxElW6iG\n",
+      "RT @NoahCRothman: When Walker was fighting for reforms, Trump was defending unions and collective bargaining privileges https://t.co/e1UWNN…\n",
+      "RT @RedheadAndRight: Report: Secret Service Says Michelle Fields Touched Trump https://t.co/c5c2sD8VO2\n",
+      "\n",
+      "This is the only article you will n…\n",
+      "RT @AIIAmericanGirI: VIDEO=&gt; Anti-Trump Protester SLUGS Elderly Trump Supporter in the Face\n",
+      "https://t.co/GeEryMDuDY\n",
+      "RT @NoahCRothman: When Walker was fighting for reforms, Trump was defending unions and collective bargaining privileges https://t.co/e1UWNN…\n",
+      "RT @JusticeRanger1: @realDonaldTrump @Pudingtane @DanScavino @GOP @infowars @EricTrump \n",
+      "URGENT PUBLIC TRUMP ALERT:\n",
+      "COVERT KILL MEANS https:…\n",
+      "RT @AIIAmericanGirI: VIDEO=&gt; Anti-Trump Protester SLUGS Elderly Trump Supporter in the Face\n",
+      "https://t.co/GeEryMDuDY\n",
+      "RT @RedheadAndRight: Report: Secret Service Says Michelle Fields Touched Trump https://t.co/c5c2sD8VO2\n",
+      "\n",
+      "This is the only article you will n…\n",
+      "RT @JusticeRanger1: @realDonaldTrump @Pudingtane @DanScavino @GOP @infowars @EricTrump \n",
+      "URGENT PUBLIC TRUMP ALERT:\n",
+      "COVERT KILL MEANS https:…\n",
+      "RT @Schneider_CM: Trump says nobody had ever heard of executive orders before Obama started signing them. Never heard of the Emancipation P…\n",
+      "RT @RonBasler1: @DavidWhitDennis @realDonaldTrump @tedcruz \n",
+      "\n",
+      "CRUZ SCREWS HOOKERS\n",
+      "\n",
+      "CRUZ / CLINTON\n",
+      "RT @DonaldsAngel: Former Ms. WI just said that she is terminally ill but because of Trump pageant, her 7 yr. old son has his college educat…\n",
+      "RT @Schneider_CM: Trump says nobody had ever heard of executive orders before Obama started signing them. Never heard of the Emancipation P…\n",
+      "RT @DonaldsAngel: Former Ms. WI just said that she is terminally ill but because of Trump pageant, her 7 yr. old son has his college educat…\n",
+      "RT @Dodarey: @DR8801 @SykesCharlie Charlie, let's see you get a straight \"yes\" or \"no\" answer from Cruz a/b being unfaithful to his wife @T…\n",
+      "RT @RonBasler1: @DavidWhitDennis @realDonaldTrump @tedcruz \n",
+      "\n",
+      "CRUZ SCREWS HOOKERS\n",
+      "\n",
+      "CRUZ / CLINTON\n",
+      "RT @RockCliffOne: Remember when the idea of a diabolical moron holding the world hostage was an idea for a funny movie? #Trump #GOP https:/…\n",
+      "RT @HillaryClinton: \"Every day, another Republican bemoans the rise of Donald Trump... but [he] didn’t come out of nowhere.\" —Hillary\n",
+      "https…\n",
+      "RT @Dodarey: @DR8801 @SykesCharlie Charlie, let's see you get a straight \"yes\" or \"no\" answer from Cruz a/b being unfaithful to his wife @T…\n",
+      "RT @HillaryClinton: \"Every day, another Republican bemoans the rise of Donald Trump... but [he] didn’t come out of nowhere.\" —Hillary\n",
+      "https…\n",
+      "RT @RockCliffOne: Remember when the idea of a diabolical moron holding the world hostage was an idea for a funny movie? #Trump #GOP https:/…\n",
+      "RT @immigrant4trump: @immigrant4trump msm, cable news attacking trump all day, from 8am to 10pm today, then the reruns come on, repeating t…\n",
+      "RT @immigrant4trump: @immigrant4trump msm, cable news attacking trump all day, from 8am to 10pm today, then the reruns come on, repeating t…\n",
+      "RT @GlendaJazzey: Donald Trump’s Campaign Financing Dodge, @rrotunda https://t.co/L8flI4lswG via @VerdictJustia\n",
+      "RT @TUSK81: LOUDER FOR THE PEOPLE IN THE BACK https://t.co/hlPVyNLXzx\n",
+      "RT @loopzoop: Well...put it back https://t.co/8Yb7BDT5VM\n",
+      "RT @claytoncubitt: Stop asking Bernie supporters if they’ll vote for Hillary against Trump. We got a plan to beat Trump already. Called Ber…\n",
+      "RT @akaMaude13: Seriously can't make this up. What a joke. #NeverTrump  https://t.co/JkTx6mdRgC\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select retweets from the Twitter DataFrame: result\n",
+    "result = filter(lambda x : x[0:2] == \"RT\" , tweets_df['text'])\n",
+    "\n",
+    "# Create list from filter object result: res_list\n",
+    "res_list = list(result)\n",
+    "\n",
+    "# Print all retweets in res_list\n",
+    "for tweet in res_list:\n",
+    "    print(tweet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5b7e8938",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'en': 97, 'et': 1, 'und': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define count_entries()\n",
+    "def count_entries(df, col_name='lang'):\n",
+    "    \"\"\"Return a dictionary with counts of\n",
+    "    occurrences as value for each key.\"\"\"\n",
+    "\n",
+    "    # Initialize an empty dictionary: cols_count\n",
+    "    cols_count = {}\n",
+    "\n",
+    "    # Add try block\n",
+    "    try:\n",
+    "        # Extract column from DataFrame: col\n",
+    "        col = df[col_name]\n",
+    "        \n",
+    "        # Iterate over the column in DataFrame\n",
+    "        for entry in col:\n",
+    "    \n",
+    "            # If entry is in cols_count, add 1\n",
+    "            if entry in cols_count.keys():\n",
+    "                cols_count[entry] += 1\n",
+    "            # Else add the entry to cols_count, set the value to 1\n",
+    "            else:\n",
+    "                cols_count[entry] = 1\n",
+    "    \n",
+    "        # Return the cols_count dictionary\n",
+    "        return cols_count\n",
+    "\n",
+    "    # Add except block\n",
+    "    except:\n",
+    "        print('The DataFrame does not have a' + col_name + ' column.')\n",
+    "\n",
+    "# Call count_entries(): result1\n",
+    "result1 = count_entries(tweets_df, 'lang')\n",
+    "\n",
+    "# Print result1\n",
+    "print(result1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6745918",
+   "metadata": {},
+   "source": [
+    "# Part 3. Lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a5c62d74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heyheyheyheyhey\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define echo_word as a lambda function: echo_word\n",
+    "echo_word = (lambda word1, echo: word1 * echo)\n",
+    "\n",
+    "# Call echo_word: result\n",
+    "result = echo_word('hey', 5)\n",
+    "\n",
+    "# Print result\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c7b47a69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['protego!!!', 'accio!!!', 'expecto patronum!!!', 'legilimens!!!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a list of strings: spells\n",
+    "spells = [\"protego\", \"accio\", \"expecto patronum\", \"legilimens\"]\n",
+    "\n",
+    "# Use map() to apply a lambda function over spells: shout_spells\n",
+    "shout_spells = map(lambda a: a + '!!!', spells)\n",
+    "\n",
+    "# Convert shout_spells to a list: shout_spells_list\n",
+    "shout_spells_list = list(shout_spells)\n",
+    "\n",
+    "# Print the result\n",
+    "print(shout_spells_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "714398f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['samwise', 'aragorn', 'boromir', 'legolas', 'gandalf']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a list of strings: fellowship\n",
+    "fellowship = ['frodo', 'samwise', 'merry', 'pippin', 'aragorn', 'boromir', 'legolas', 'gimli', 'gandalf']\n",
+    "\n",
+    "# Use filter() to apply a lambda function over fellowship: result\n",
+    "result = filter(lambda fellowship : len(fellowship) > 6, fellowship)\n",
+    "\n",
+    "# Convert result to a list: result_list\n",
+    "result_list = list(result)\n",
+    "\n",
+    "# Print result_list\n",
+    "print(result_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6492bbe2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "robbsansaaryabrandonrickon\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import reduce from functools\n",
+    "from functools import reduce\n",
+    "\n",
+    "# Create a list of strings: stark\n",
+    "stark = ['robb', 'sansa', 'arya', 'brandon', 'rickon']\n",
+    "\n",
+    "# Use reduce() to apply a lambda function over stark: result\n",
+    "result = reduce(lambda item1, item2 : item1 + item2, stark)\n",
+    "\n",
+    "# Print the result\n",
+    "print(result)"
    ]
   }
  ],
