Edit week_9 ipynb file - 5

--- a/week_9/week_9.ipynb
+++ b/week_9/week_9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "709f2843",
+   "id": "53031088",
    "metadata": {},
    "source": [
     "# Part 1, 2"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c64b7319",
+   "id": "aff54b9a",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2182bd9b",
+   "id": "e410860e",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5b7e8938",
+   "id": "60d25999",
    "metadata": {},
    "outputs": [
     {
@@ -440,8 +440,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e91b4181",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'en': 97, 'et': 1, 'und': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define count_entries()\n",
+    "def count_entries(df, col_name='lang'):\n",
+    "    \"\"\"Return a dictionary with counts of\n",
+    "    occurrences as value for each key.\"\"\"\n",
+    "    \n",
+    "    # Raise a ValueError if col_name is NOT in DataFrame\n",
+    "    if col_name not in df.columns:\n",
+    "        raise Exception('The DataFrame does not have a ' + col_name + ' column.')\n",
+    "        # print('The DataFrame does not have a ' + col_name + ' column.')\n",
+    "\n",
+    "    # Initialize an empty dictionary: cols_count\n",
+    "    cols_count = {}\n",
+    "    \n",
+    "    # Extract column from DataFrame: col\n",
+    "    col = df[col_name]\n",
+    "    \n",
+    "    # Iterate over the column in DataFrame\n",
+    "    for entry in col:\n",
+    "\n",
+    "        # If entry is in cols_count, add 1\n",
+    "        if entry in cols_count.keys():\n",
+    "            cols_count[entry] += 1\n",
+    "            # Else add the entry to cols_count, set the value to 1\n",
+    "        else:\n",
+    "            cols_count[entry] = 1\n",
+    "        \n",
+    "        # Return the cols_count dictionary\n",
+    "    return cols_count\n",
+    "\n",
+    "# Call count_entries(): result1\n",
+    "result1 = count_entries(tweets_df, 'lang')\n",
+    "\n",
+    "# Print result1\n",
+    "print(result1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "a6745918",
+   "id": "7ebe0e9f",
    "metadata": {},
    "source": [
     "# Part 3. Lambda"
@@ -450,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a5c62d74",
+   "id": "4c8dc78c",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c7b47a69",
+   "id": "ffdc5808",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "714398f1",
+   "id": "7b61efd7",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6492bbe2",
+   "id": "9154a20f",
    "metadata": {},
    "outputs": [
     {
